--- a/styles/my_events_table.css
+++ b/styles/my_events_table.css
@@ -172,3 +172,31 @@ th.sorting_desc span.sorting-indicator {
 	clear:both;
 	padding-top:20px;
 }
+div.updated,
+div.error,
+div.warning {
+	padding: .3em .6em;
+	margin: 5px 0 15px;
+	display: block;
+	width: 100%;
+	border: 1px solid;
+	border-radius: 4px;
+}
+div.updated p,
+div.error p,
+div.warning p {
+	margin: auto;
+	font-size: 0.9em;
+}
+div.updated {
+	background-color: lightYellow;
+	border-color: #E6DB55;
+}
+div.error {
+	background-color: #FFEBE8;
+	border-color: #C00;
+}
+div.warning {
+	background-color: #D9EDF7;
+	border-color: #3A87AD;
+}
