reset the font size for the table data [touch: 3852]
This is mostly for the twenty thirteen theme. It was picking up the .post-title class and applying some changes to the type. This makes sure that the font-size is consistent from one data cell to the next one.

--- a/styles/my_events_table.css
+++ b/styles/my_events_table.css
@@ -206,3 +206,11 @@ div.warning {
 	background-color: #D9EDF7;
 	border: 1px solid #3A87AD;
 }
+
+/* reset the font-size for the table data (looking at you, twentythirteen) */
+
+.my_events_table td,
+.my_events_table td.post-title {
+	font-size: 1em;
+	line-height: 1.33em;
+}
